# TechStack

./: .editorconfig  .gitignore  .prettierrc  404.html  CNAME  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml  webp.sh
.github/workflows/: deploy.yml
HPC/📒 工具/: index.html
HPC/📒 性能分析/: index.html
HPC/📒 访存优化/: index.html
HPC/📖 C++ 并发编程实战（第 2 版）/: index.html
Linux/: index.html
Linux/发行版与包管理/: index.html
Linux/启动过程/: index.html
Linux/文件系统/: index.html
Linux/📒 内核源码：NFS/: index.html
Linux/📖 Linux Device Drivers (3rd)/: index.html
Linux/📖 Linux Kernel Development (3rd)/: index.html
RFC/: index.html
RFC/4506 XDR/: index.html
RFC/5531 RPC/: index.html
RFC/5661 NFSv4.1/: index.html
RFC/7530 NFSv4/: index.html
backup/basic/: Basic.md  Git.md  Linux.md  Shortcuts.md
backup/books/: AIPP.md  ATBSP.md  Algorithm.md  (+8 more)
docs/: .CNAME  Links.md  Misc.md  Project.md  README.md  Tags.md  Test.md  hello.md  index.md  links.md  misc.md  projects.md  stack.md  tags.md  test.md  theirNotebook.md
docs/科研/hpn.assets/code/: .gitignore  CMakeLists.txt
draft/: alg_intro.md  nerual.md  pytorch.md
includes/: abbreviations.md
javascripts/: mathjax.js  tablesort.js
links/: index.html
other/: ap.md  ca-labs.md  flutter.md  hip.md  huawei.md  qemu.md  rdma.md  temp.md  verilog.md  编译构建系统.md
search/: search_index.json
stylesheets/: extra.css
temp/: Project.md  Test.md  fpga.md
人工智能/: index.html
体系结构/: index.html
系统和体系结构/: index.html
网络/: index.html
草稿/: index.html
计算机图形学/: index.html
读书笔记/: index.html
高性能计算/: index.html
(+921 files in other folders)
